# Ember

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 214f5b079348_merge_recurrence_and_mail_migrations.py  3b5750ee264b_add_event_recurrence.py  554f441b34c6_scope_user_preferences_to_workspace.py  5fd3d2d0c4a1_add_event_recurrence_exdates.py  6a4c8e2f1b90_add_personal_space.py  72d84b91c3ef_add_board_assignment_options.py  7e41391839a4_add_workspaces_workspace_members_.py  8047f1bedbb7_add_sessions_and_refresh_tokens.py  84f1c6a2d9b0_add_holiday_calendars.py  8d91d5e2f3a4_add_knowledge_boards.py  9b7c1d2e4f6a_add_knowledge_folders.py  a1f3c9d20b84_add_mail_domains_and_mail_accounts.py  b10a89ad58fd_create_identity_layer_tables.py  c3b8e2f1a9d4_add_workhours_and_view_prefs.py  d5c9a1f4e2b7_add_events_and_attendees.py  e1a7c0b93f52_add_procrastinate_schema.py  f020c612904a_add_invites.py
core/ember/: config.py  db.py  dependencies.py  jwt.py  main.py  security.py
core/ember/jobs/: __init__.py  app.py  tasks.py
core/ember/mail/: __init__.py  client.py  sender.py
core/ember/models/: __init__.py  (+15 more)
core/tests/: conftest.py  test_events_api.py  test_holidays.py  test_invites_api.py  test_invites_service.py  test_jobs.py  test_knowledge_api.py  test_login_api.py  test_login_service.py  test_logout_api.py  test_logout_service.py  test_mail_accounts_api.py  test_mail_client.py  test_mail_domains_api.py  test_mail_sender.py  test_mail_service.py  test_personal_api.py  test_preferences_api.py  test_refresh_api.py  test_refresh_service.py  test_security.py  test_signup_api.py  test_signup_service.py  test_workspaces_api.py  test_workspaces_service.py
(+85 files in other folders)
