[project]
name = "ember"
version = "0.1.0"
description = "Private and self-hosted calendar for daily use"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "crudadmin>=0.5.0",
    "fastapi>=0.115",
    "fastapi-env-banner>=0.1.0",
    "fastapi-ht>=0.2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.34",
    "venvalid>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
