[project]
name = "ember"
version = "0.1.0"
description = "Private and self-hosted calendar for daily use"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=23.1",
    "crudadmin>=0.5.0",
    "email-validator>=2.3",
    "fastapi>=0.115",
    "fastapi-env-banner>=0.1.0",
    "fastapi-ht>=0.2.0",
    "httpx>=0.28",
    "procrastinate>=3.9.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pyjwt>=2.9",
    "python-dateutil>=2.9",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.34",
    "venvalid>=0.3.0",
    "cloudinary>=1.45.0",
    "python-multipart>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
